# gib

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
gib-core/: Cargo.toml
gib-core/src/: bus.rs  gameboy.rs  lib.rs
gib-core/src/cpu/: core.rs  debug.rs  mod.rs  opcodes.rs
gib-core/src/dbg/: mod.rs
gib-core/src/io/: interrupts.rs  joypad.rs  mod.rs  reg.rs  serial.rs  sound.rs  timer.rs  video.rs
gib-core/src/mem/: memory.rs  mod.rs
res/: opcodes.csv
script/: profile
src/: lib.rs  main.rs
src/gb/: bus.rs  gameboy.rs  memory.rs  mod.rs  sound.rs  video.rs
src/gb/cpu/: core.rs  cpu.rs  debug.rs  mod.rs  opcodes.rs
src/gb/dbg/: mod.rs
src/gb/io/: interrupts.rs  joypad.rs  mod.rs  reg.rs  serial.rs  sound.rs  timer.rs  video.rs
src/gb/mem/: mem_ops.rs  memory.rs  mod.rs
src/ui/: context.rs  ctx.rs  debug.rs  debugger.rs  disasm.rs  memedit.rs  mod.rs  sound.rs  state.rs  utils.rs
src/ui/views/: debugger.rs  disassembly.rs  memedit.rs  memmap.rs  mod.rs  peripherals.rs
tests/: blargg_golden.rs  gekkio_golden.rs
tests/common/: mod.rs
