[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
description = "A Game Boy emulator written in Rust"
edition = "2021"
name = "gib"
version = "0.5.2"

[workspace]
members = ["gib-core"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
cpal = "0.15.2"
crossbeam = "0.8.2"
eframe = { version = "0.21.0", default-features = false, features = ["wgpu"] }
egui = "0.21.0"
gib-core = { path = "gib-core" }
image = { version = "0.24.6", default-features = false, features = ["png"] }
parking_lot = "0.12.1"
pollster = "0.3.0"
rfd = { version = "0.11.4", default-features = false, features = [
    "xdg-portal",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = "0.15.1"

[profile.dev]
debug = false
opt-level = 3
overflow-checks = false
