[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
description = "A Game Boy emulator written in Rust"
edition = "2021"
name = "gib"
version = "0.5.2"

[workspace]
members = ["gib-core"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
cpal = "0.17.1"
crossbeam = "0.8.4"
eframe = { version = "0.33.3", default-features = false, features = [
    "wayland",
    "wgpu",
] }
egui = "0.33.3"
gib-core = { path = "gib-core" }
image = { version = "0.25.9", default-features = false, features = ["png"] }
parking_lot = "0.12.5"
pollster = "0.4.0"
rfd = { version = "0.17.2", default-features = false, features = [
    "xdg-portal",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
wgpu = "27.0.1"

[profile.dev]
debug = false
opt-level = 3
overflow-checks = false
